<resources>
    <string name="app_name">Trip Planner App</string>
    <string name="textview">My Trips </string>
    <string name="textview1">Explore your Next Trip </string>
    <string name="numOfTravelers">Select Number of People for the Trip:</string>
    <string name="lake_district">Lake District</string>
    <string name="tokyo_night">Tokyo at Night</string>
    <string name="england">England</string>
    <string name="new_york">New York</string>
    <string name="new_york_highway">New York City</string>
    <string name="tokyo">Tokyo</string>
    <string name="price">$150/night</string>
    <string name="tokyo_price">$140/night</string>
    <string name="textview_homepage">Plan your trip, \n pack your bags, and let\'s go!</string>
    <string name="get_started_btn">Get Started</string>
    <string name="lake_pic_descr">Picture Of Lake </string>
    <string name="nwyrk_pic_descr">Picture Of New York </string>
    <string name="tokyo_pic_descr">Picture OfTokyo </string>
    <string name="london_location">Lake Location in London </string>
    <string name="tokyo_location"> Tokyo at night Location </string>
    <string name="nwyrk_location">New york city location</string>
    <string name="todo">Your Todo Text Here</string>
    <string name="activityHomepage">Trip Planner App/Home Page</string>
    <string name="in_oncreate">In on Create</string>
    <string name="explore" />
    <string name="title_activity_second_page">Explore Page</string>
    <string name="shortCutHomePage">Trip App</string>
    <string name="open_homepage_label">Open Trip App</string>
    <string name="manchester_england">Manchester,England</string>
    <string name="new_york_city">New York City</string>
    <string name="japan_tokyo">Japan,Tokyo</string>
    <string name="next">NEXT</string>
    <string name="content_description_select_number">content_description_select_number</string>
    <string name="please_rate_your_experience_with_us">Please Rate your Experience with us.</string>
    <string name="enjoy_your_trip">Enjoy your Trip</string>
    <string name="explore_our_new_deal">Explore our new deal</string>
    <string name="number_of_travelers">Number Of Travelers:</string>
    <string name="enter_your_text_here">Enter your text here</string>
    <string name="destination">Destination:</string>
    <string name="enterHere">Enter your text here</string>
    <string name="enterText">Enter your text here</string>
    <string name="total_price">Total Price:</string>
    <string name="enterText1">Enter date (YYYY-MM-DD)</string>
    <string name="enter_a_date_within_1_to_7_days"></string>
    <string name="enterText2">Enter your text here</string>
    <string name="price_night">Price/Night:</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="PREV">PREV</string>
    <string name="start_date">Start Date:</string>
    <string name="enterExtra5">Enter your text here</string>
    <string name="price1">$160/night</string>
    <string name="review_fare">Review Fare</string>
    <string name="manchesterEngland">Manchester,England</string>
    <string name="newYorkCity">New York City</string>
    <string name="japanTokyo">Japan, Tokyo</string>
    <string name="next_">NEXT</string>
    <string name="Kitfo">Kitfo is a classic Ethiopian dish made from finely minced raw beef, seasoned with spices, and served with traditional sides like injera and cottage cheese</string>
    <string name="pakoraDescription">Pakora is a crispy Indian snack made by frying vegetables or meat coated in seasoned chickpea flour batter</string>
    <string name="sushiDescription">Sushi is a popular Japanese dish consisting of vinegar rice topped or rolled with various ingredients such as raw fish, seafood, vegetables, or egg</string>
    <string name="food_menu">FOOD MENU</string>
    <string name="arabicFoodDescription">Halloumi is a semi-hard, brined cheese with a high melting point, often grilled or fried, while falafel consists of fried balls or patties made from ground chickpeas or fava beans, typically served in pita bread with various accompaniments</string>
    <string name="dorowet">Doro Wot is a traditional Ethiopian stew made with chicken simmered in a spicy berbere sauce, flavored with onions, garlic, ginger, and other Ethiopian spices, creating a rich and aromatic dish often served with injera, a sourdough flatbread, making it a staple of Ethiopian cuisine.</string>
    <string name="mexicanFoodDescription">Mexican food is conformed of a series of delicious dishes and is recognized for its distinctive flavors, has an extensive variety of recipes that have been passed from generation to generation and today constitute a great gastronomic attraction.</string>
    <string name="toastInsertData">You have successfully inserted a data into the database</string>
    <string name="pastaDescription1">The pastaDescription typically describes the characteristics, ingredients, and preparation method of a particular pasta dish. It may include details such as the type of pasta used, the sauce or toppings, cooking techniques, and any additional flavorings or seasonings.</string>
    <string name="italianLasagnadescr">Italian lasagna is a classic dish consisting of layers of wide pasta sheets, rich tomato sauce, creamy béchamel, savory meat, and melted cheese, baked to golden perfection.\n</string>
</resources>