<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/homepage_scene">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:scaleX="3"
        android:scaleY="3"
        android:src="@drawable/bluepicture"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="393dp"
        android:layout_height="282dp"
        android:layout_marginTop="84dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/miami_beach" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="267dp"
        android:layout_height="52dp"
        android:layout_marginBottom="20dp"
        android:elevation="2dp"
        android:theme="@style/CustomRatingBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/BlueTextStyle"
        android:layout_width="368dp"
        android:layout_height="72dp"
        android:layout_marginBottom="16dp"
        android:text="@string/please_rate_your_experience_with_us"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/BlueTextStyle"
        android:layout_width="389dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:text="@string/enjoy_your_trip"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/foodMenuButton"
        style="@style/button_style"
        android:layout_width="159dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="236dp"
        android:text="@string/food_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/databaseButton"
        style="@style/button_style"
        android:layout_width="159dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:text="Check Database "
        android:onClick="databaseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>