<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:background="@color/teal_200"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textListDestination"
        android:layout_width="291dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="92dp"
        android:text="Please select one of your trip destinations from the list."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list" />

    <Spinner
        android:id="@+id/listOfDestination"
        android:layout_width="294dp"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:entries="@array/list"
        app:layout_constraintBottom_toTopOf="@+id/textViewForCalander1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textListDestination"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/explore_page_button1"
        style="@style/button_style"
        android:layout_width="116dp"
        android:layout_height="48dp"
        android:layout_marginTop="704dp"
        android:layout_marginEnd="256dp"
        android:text="@string/PREV"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewExploreMsg" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <TextView
        android:id="@+id/txtViewExploreMsg"
        android:layout_width="368dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="758dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/textview1"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="-14dp" />


    <TextView
        android:id="@+id/textView15"
        style="@style/BlueTexts"
        android:layout_width="284dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="92dp"
        android:text="@string/numOfTravelers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Spinner
        android:id="@+id/list"
        android:layout_width="287dp"
        android:layout_height="63dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:entries="@array/list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

    <CalendarView
        android:id="@+id/calendarView"
        style="@style/BlueTexts"
        android:layout_width="294dp"
        android:layout_height="212dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="12dp"
        android:dateTextAppearance="@style/CustomCalendarDateTextAppearance"
        app:layout_constraintBottom_toTopOf="@+id/explore_page_button1"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/explore_next_button2"
        style="@style/button_style"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginTop="684dp"
        android:layout_marginEnd="72dp"
        android:text="@string/next_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewExploreMsg"
        app:layout_constraintVertical_bias="0.74" />

    <TextView
        android:id="@+id/textViewForCalander1"
        android:layout_width="292dp"
        android:layout_height="44dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="8dp"
        android:text="@string/select_the_start_date_of_your_trip"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>